[package]
name = "imgbb_uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dotenvy = "0.15.7"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json", "rustls-tls", "multipart", "blocking"] }
serde_json = "1.0.107"
